[package]
name = "muelsyse-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
rusqlite = "0.30.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
